[package]
name = "monotonic-clock"
version = "0.1.0"
edition = "2021"
description = "Some Clock"
repository = "https://github.com/ahmed-masud/monotonic-clock"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
