[package]
name = "monotonic-clock"
version = "0.0.2"
edition = "2021"
description = "Some Clock"
repository = "https://github.com/ahmed-masud/monotonic-clock"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]


[dependencies]

[dev-dependencies]
assert2 = "0.3.6"
